plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.bm'
version = '0.0.1-SNAPSHOT'
description = 'ws-chat'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    //Spring
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.0'
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    //PDF writer
    implementation("com.itextpdf:itext-core:9.4.0")

    //Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    // Flyway
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'
    testImplementation 'org.springframework.boot:spring-boot-starter-flyway-test'
    runtimeOnly 'org.postgresql:postgresql'

    // JWT
    implementation "io.jsonwebtoken:jjwt-api:0.13.0"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.13.0"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.13.0"

    // MapStruct
    implementation "org.mapstruct:mapstruct:1.6.3"
    annotationProcessor "org.mapstruct:mapstruct-processor:1.6.3"

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // Envers
    implementation 'org.hibernate.orm:hibernate-envers'
    annotationProcessor 'org.hibernate.orm:hibernate-envers'

    // Tests
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-cache-test'
}


tasks.named('test') {
    useJUnitPlatform()
}
